src/objects/QPMS__Document_Profile_History__c.object
<CustomObject>
    <description>Audit Trail Object for Document Profile module.</description>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Name__c</fullName>
        <label>Document Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <label>NewValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Object__c</fullName>
        <label>Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <label>OldValue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Document Profile Histories</relationshipLabel>
        <relationshipName>Document_Profile_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Revision__c</fullName>
        <label>Revision</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Profile</fullName>
                </value>
                <value>
                    <fullName>TrainingUsers</fullName>
                </value>
                <value>
                    <fullName>Document_Details</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Approval</fullName>
                </value>
                <value>
                    <fullName>Document Approval</fullName>
                </value>
                <value>
                    <fullName>CollaborationReview Approval</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Due Date</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Owner</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>DocumentTraining</fullName>
                </value>
                <value>
                    <fullName>Document Current</fullName>
                </value>
                <value>
                    <fullName>Document Profile Change Owner</fullName>
                </value>
                <value>
                    <fullName>Document change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview Change Due Approval</fullName>
                </value>
                <value>
                    <fullName>Document Void</fullName>
                </value>
                <value>
                    <fullName>Document Profile Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Document Approval Reassign Approver</fullName>
                </value>
                <value>
                    <fullName>Init</fullName>
                </value>
                <value>
                    <fullName>DocumentDetails</fullName>
                </value>
                <value>
                    <fullName>CollaborationReview</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>EffectivenessReview</fullName>
                </value>
                <value>
                    <fullName>Effectiveness Review</fullName>
                </value>
                <value>
                    <fullName>Collaboration Review</fullName>
                </value>
                <value>
                    <fullName>Document Details</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>doc_Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__isCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Profile History</label>
    <nameField>
        <displayFormat>DPH-{0000}</displayFormat>
        <label>Document Profile History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Profile Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>